fix(): remove horizontal scroll

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,6 +19,7 @@ body {
   font-family: var(--body-font);
   background-color: var(--background-color);
   color: var(--font-color);
+  overflow-x: hidden;
 }
 
 a {
